[project]
name = "peca-sys-review-staging"
version = "0.1.0"
description = ""
authors = [
    {name = "Franzili",email = "franziska.niemeyer@gmx.de"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "seaborn (>=0.13.2,<0.14.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "matplotlib-venn (>=1.1.2,<2.0.0)",
    "brokenaxes (>=0.6.2,<0.7.0)"
]

[packages]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
